# vacansies

./: pyproject.toml
authentication/: models.py  serializer.py  urls.py  views.py
authentication/migrations/: 0001_initial.py  0002_user_role.py
companies/: admin.py  urls.py  views.py
companies/migrations/: 0001_initial.py
djangoProject/: settings.py  urls.py
vacancies/: admin.py  models.py  permissions.py  serializer.py  urls.py  views.py
vacancies/migrations/: 0001_initial.py  0002_vacancy_users.py  0003_skill_vacancy_skills.py  0004_alter_skill_options_alter_vacancy_options.py  0005_skill_is_active.py  0006_vacancy_likes.py
